--- a/src/assets/patchouli/config1.json
+++ b/src/assets/patchouli/config1.json
@@ -4,29 +4,25 @@
             "cd": 300,
             "nb": 1,
             "action": 407,
-            "allowedKeys": [0, 0, 0, 1, 0, 0, 0, 0],
-            "recovery": 300
+            "allowedKeys": [0, 0, 0, 1, 0, 0, 0, 0]
         },
         "air": {
             "cd": 300,
             "nb": 1,
             "action": 407,
-            "allowedKeys": [0, 0, 0, 1, 0, 0, 0, 0],
-            "recovery": 300
+            "allowedKeys": [0, 0, 0, 1, 0, 0, 0, 0]
         }
     },
     "5a": {
         "ground": {
             "cd": 360,
             "nb": 1,
-            "action": 412,
-            "recovery": 120
+            "action": 412
         },
         "air": {
             "cd": 360,
             "nb": 1,
-            "action": 412,
-            "recovery": 120
+            "action": 412
         }
     },
     "5c": {
@@ -35,30 +31,14 @@
             "nb": 1,
             "allowedKeys": [0, 0, 0, 0, 1, 0, 0, 0],
             "action": 411,
-            "recovery": 300,
-            "offsetX": -50,
-            "reset": [
-                {
-                    "offset": "7D0",
-                    "value": 0,
-                    "size": 4
-                }
-            ]
+            "offsetX": -50
         },
         "air": {
             "cd": 600,
             "nb": 1,
             "allowedKeys": [0, 0, 0, 0, 1, 0, 0, 0],
             "action": 411,
-            "recovery": 300,
-            "offsetX": -50,
-            "reset": [
-                {
-                    "offset": "7D0",
-                    "value": 0,
-                    "size": 4
-                }
-            ]
+            "offsetX": -50
         }
     }
 }
