--- a/src/assets/alice/config0.json
+++ b/src/assets/alice/config0.json
@@ -1,6 +1,6 @@
 {
-    "spells": [208],
-    "shownCost": 3,
+    "spells": [207],
+    "shownCost": 4,
     "5a": {
         "ground": {
             "cd": 300,
@@ -83,54 +83,53 @@
     "8a": {
         "ground": {
             "cd": 900,
-            "nb": 3,
-            "action": 568,
-            "end": 566,
-            "offsetX": -50,
-            "cond": "end"
+            "nb": 1,
+            "action": 560,
+            "offsetX": -50
         },
         "air": {
             "cd": 900,
-            "nb": 3,
-            "action": 568,
-            "end": 566,
+            "nb": 1,
+            "action": 560,
             "posY": 0,
-            "offsetX": -50,
-            "cond": "end"
+            "offsetX": -50
         }
     },
     "8b": {
         "ground": {
-            "cd": 450,
+            "cd": 900,
             "nb": 1,
-            "action": 551,
-            "offsetX": -50,
-            "cond": "end"
+            "action": 510,
+            "allowedKeys": [0, 0, 0, 1, 0, 0, 0, 0],
+            "offsetX": -50
         },
         "air": {
-            "cd": 450,
+            "cd": 900,
             "nb": 1,
-            "action": 551,
+            "action": 512,
+            "allowedKeys": [0, 0, 0, 1, 0, 0, 0, 0],
             "posY": 0,
-            "offsetX": -50,
-            "cond": "end"
+            "speedY": 0,
+            "gravityY": 0,
+            "offsetX": -50
         }
     },
     "8c": {
         "ground": {
-            "cd": 600,
+            "cd": 900,
             "nb": 1,
-            "action": 530,
-            "offsetX": -50,
-            "cond": "end"
+            "allowedKeys": [0, 0, 0, 0, 1, 0, 0, 0],
+            "action": 511,
+            "offsetX": -50
         },
         "air": {
-            "cd": 600,
+            "cd": 900,
             "nb": 1,
-            "action": 530,
-            "posY": 0,
-            "offsetX": -50,
-            "cond": "end"
+            "allowedKeys": [0, 0, 0, 0, 1, 0, 0, 0],
+            "action": 513,
+            "speedY": 0,
+            "gravityY": 0,
+            "offsetX": -50
         }
     },
 
@@ -139,25 +138,22 @@
             "speedX": 0,
             "speedY": 0,
             "offsetX": -50,
-            "cost": 3,
-            "canControl": true,
-            "cardName": 208,
+            "cost": 4,
+            "cardName": 207,
             "cd": 1200,
             "nb": 1,
-            "action": 608
+            "action": 607
         },
         "air": {
             "speedX": 0,
             "speedY": 0,
-            "posY": 0,
             "gravityY": 0,
             "offsetX": -50,
-            "cost": 3,
-            "canControl": true,
-            "cardName": 208,
+            "cost": 4,
+            "cardName": 207,
             "cd": 1200,
             "nb": 1,
-            "action": 608
+            "action": 657
         }
     }
 }
