--- a/src/assets/alice/config2.json
+++ b/src/assets/alice/config2.json
@@ -1,6 +1,6 @@
 {
-    "spells": [208],
-    "shownCost": 3,
+    "spells": [211],
+    "shownCost": 5,
     "5a": {
         "ground": {
             "cd": 300,
@@ -82,18 +82,16 @@
 
     "8a": {
         "ground": {
-            "cd": 900,
-            "nb": 3,
-            "action": 568,
-            "end": 566,
+            "cd": 750,
+            "nb": 1,
+            "action": 570,
             "offsetX": -50,
             "cond": "end"
         },
         "air": {
-            "cd": 900,
-            "nb": 3,
-            "action": 568,
-            "end": 566,
+            "cd": 750,
+            "nb": 1,
+            "action": 570,
             "posY": 0,
             "offsetX": -50,
             "cond": "end"
@@ -101,34 +99,36 @@
     },
     "8b": {
         "ground": {
-            "cd": 450,
+            "cd": 600,
             "nb": 1,
-            "action": 551,
+            "action": 506,
             "offsetX": -50,
             "cond": "end"
         },
         "air": {
-            "cd": 450,
+            "cd": 600,
             "nb": 1,
-            "action": 551,
-            "posY": 0,
+            "action": 507,
+            "speedY": 0,
+            "gravityY": 0,
             "offsetX": -50,
             "cond": "end"
         }
     },
     "8c": {
         "ground": {
-            "cd": 600,
+            "cd": 750,
             "nb": 1,
-            "action": 530,
+            "action": 545,
             "offsetX": -50,
             "cond": "end"
         },
         "air": {
-            "cd": 600,
+            "cd": 750,
             "nb": 1,
-            "action": 530,
-            "posY": 0,
+            "action": 547,
+            "speedY": -1,
+            "gravityY": -0.1,
             "offsetX": -50,
             "cond": "end"
         }
@@ -139,12 +139,11 @@
             "speedX": 0,
             "speedY": 0,
             "offsetX": -50,
-            "cost": 3,
-            "canControl": true,
-            "cardName": 208,
+            "cost": 5,
+            "cardName": 211,
             "cd": 1200,
             "nb": 1,
-            "action": 608
+            "action": 611
         },
         "air": {
             "speedX": 0,
@@ -152,12 +151,11 @@
             "posY": 0,
             "gravityY": 0,
             "offsetX": -50,
-            "cost": 3,
-            "canControl": true,
-            "cardName": 208,
+            "cost": 5,
+            "cardName": 211,
             "cd": 1200,
             "nb": 1,
-            "action": 608
+            "action": 611
         }
     }
 }
