--- a/src/assets/chirno/config0.json
+++ b/src/assets/chirno/config0.json
@@ -1,6 +1,6 @@
 {
-    "spells": [204],
-    "shownCost": 5,
+    "spells": [213],
+    "shownCost": 3,
     "5a": {
         "ground": {
             "start": 200,
@@ -65,40 +65,33 @@
 
     "8a": {
         "ground": {
-            "cd": 1200,
+            "cd": 600,
             "nb": 1,
-            "action": 550,
+            "action": 510,
             "offsetX": -50,
-            "startup": 30,
-            "recovery": 15,
             "cond": "end"
         },
         "air": {
-            "cd": 1200,
+            "cd": 600,
             "nb": 1,
-            "action": 550,
-            "posY": 0,
+            "action": 512,
             "offsetX": -50,
-            "startup": 30,
-            "recovery": 15,
             "cond": "end"
         }
     },
     "8b": {
         "ground": {
-            "cd": 450,
+            "cd": 600,
             "nb": 1,
-            "action": 500,
+            "action": 570,
             "offsetX": -50,
             "cond": "end"
         },
         "air": {
-            "cd": 450,
+            "cd": 600,
             "nb": 1,
-            "action": 502,
+            "action": 572,
             "offsetX": -50,
-            "speedX": 0,
-            "gravityY": 0,
             "cond": "end"
         }
     },
@@ -106,14 +99,14 @@
         "ground": {
             "cd": 600,
             "nb": 1,
-            "action": 566,
+            "action": 545,
             "offsetX": -50,
             "cond": "end"
         },
         "air": {
             "cd": 600,
             "nb": 1,
-            "action": 566,
+            "action": 546,
             "posY": 0,
             "offsetX": -50,
             "cond": "end"
@@ -124,24 +117,25 @@
         "ground": {
             "speedX": 0,
             "speedY": 0,
-            "offsetX": 100,
-            "cost": 5,
-            "cardName": 204,
+            "offsetX": -50,
+            "cost": 3,
+            "canControl": true,
+            "cardName": 213,
             "cd": 1200,
             "nb": 1,
-            "action": 604
+            "action": 613
         },
         "air": {
             "speedX": 0,
             "speedY": 0,
-            "posY": 0,
             "gravityY": 0,
-            "offsetX": 100,
-            "cost": 5,
-            "cardName": 204,
+            "offsetX": -50,
+            "cost": 3,
+            "canControl": true,
+            "cardName": 213,
             "cd": 1200,
             "nb": 1,
-            "action": 604
+            "action": 663
         }
     }
 }
