--- a/src/assets/chirno/config2.json
+++ b/src/assets/chirno/config2.json
@@ -1,6 +1,6 @@
 {
-    "spells": [204],
-    "shownCost": 5,
+    "spells": [210],
+    "shownCost": 3,
     "5a": {
         "ground": {
             "start": 200,
@@ -65,37 +65,32 @@
 
     "8a": {
         "ground": {
-            "cd": 1200,
+            "cd": 450,
             "nb": 1,
-            "action": 550,
-            "offsetX": -50,
-            "startup": 30,
-            "recovery": 15,
-            "cond": "end"
+            "action": 560,
+            "offsetX": 0,
+            "cond": "basic"
         },
         "air": {
-            "cd": 1200,
+            "cd": 450,
             "nb": 1,
-            "action": 550,
-            "posY": 0,
-            "offsetX": -50,
-            "startup": 30,
-            "recovery": 15,
-            "cond": "end"
+            "action": 562,
+            "offsetX": 0,
+            "cond": "basic"
         }
     },
     "8b": {
         "ground": {
-            "cd": 450,
+            "cd": 600,
             "nb": 1,
-            "action": 500,
+            "action": 526,
             "offsetX": -50,
             "cond": "end"
         },
         "air": {
-            "cd": 450,
+            "cd": 600,
             "nb": 1,
-            "action": 502,
+            "action": 526,
             "offsetX": -50,
             "speedX": 0,
             "gravityY": 0,
@@ -106,14 +101,14 @@
         "ground": {
             "cd": 600,
             "nb": 1,
-            "action": 566,
+            "action": 505,
             "offsetX": -50,
             "cond": "end"
         },
         "air": {
             "cd": 600,
             "nb": 1,
-            "action": 566,
+            "action": 505,
             "posY": 0,
             "offsetX": -50,
             "cond": "end"
@@ -124,24 +119,23 @@
         "ground": {
             "speedX": 0,
             "speedY": 0,
-            "offsetX": 100,
-            "cost": 5,
-            "cardName": 204,
+            "offsetX": 0,
+            "cost": 3,
+            "cardName": 210,
             "cd": 1200,
             "nb": 1,
-            "action": 604
+            "action": 610
         },
         "air": {
             "speedX": 0,
             "speedY": 0,
-            "posY": 0,
             "gravityY": 0,
-            "offsetX": 100,
-            "cost": 5,
-            "cardName": 204,
+            "offsetX": 0,
+            "cost": 3,
+            "cardName": 210,
             "cd": 1200,
             "nb": 1,
-            "action": 604
+            "action": 660
         }
     }
 }
