--- a/src/assets/komachi/config1.json
+++ b/src/assets/komachi/config1.json
@@ -5,8 +5,7 @@
             "nb": 1,
             "speedX": 6,
             "action": 305,
-            "offsetX": 20,
-            "recovery": 120
+            "offsetX": 20
         },
         "air": {
             "cd": 300,
@@ -14,7 +13,6 @@
             "speedX": 6,
             "action": 305,
             "offsetX": 20,
-            "recovery": 120,
             "posY": 0
         }
     },
@@ -24,15 +22,13 @@
             "nb": 1,
             "action": 304,
             "speedY": 0,
-            "offsetX": -10,
-            "recovery": 150
+            "offsetX": -10
         },
         "air": {
             "cd": 300,
             "nb": 1,
             "action": 307,
-            "offsetY": 50,
-            "recovery": 180
+            "offsetY": 50
         }
     },
     "5c": {
@@ -40,15 +36,13 @@
             "cd": 300,
             "nb": 1,
             "action": 411,
-            "speedY": 0,
-            "recovery": 60
+            "speedY": 0
         },
         "air": {
             "cd": 300,
             "nb": 1,
             "action": 411,
             "speedY": 0,
-            "recovery": 60,
             "posY": 0
         }
     }
