--- a/src/assets/reimu/config1.json
+++ b/src/assets/reimu/config1.json
@@ -4,31 +4,27 @@
             "cd": 240,
             "nb": 1,
             "action": 304,
-            "offsetX": -50,
-            "recovery": 60
+            "offsetX": -50
         },
         "air": {
             "cd": 240,
             "nb": 1,
             "action": 304,
             "offsetX": -50,
-            "posY": 0,
-            "recovery": 60
+            "posY": 0
         }
     },
     "5b": {
         "ground": {
             "cd": 360,
             "nb": 1,
-            "action": 412,
-            "recovery": 30
+            "action": 412
         },
         "air": {
             "cd": 360,
             "nb": 1,
             "action": 412,
-            "posY": 0,
-            "recovery": 30
+            "posY": 0
         }
     },
     "5c": {
@@ -36,14 +32,12 @@
             "cd": 360,
             "nb": 1,
             "action": 410,
-            "offsetX": 0,
-            "recovery": 120
+            "offsetX": 0
         },
         "air": {
             "cd": 360,
             "nb": 1,
-            "action": 414,
-            "recovery": 120
+            "action": 414
         }
     }
 }
