--- a/src/assets/remilia/config2.json
+++ b/src/assets/remilia/config2.json
@@ -1,6 +1,6 @@
 {
-    "spells": [207],
-    "shownCost": 3,
+    "spells": [208],
+    "shownCost": 2,
     "5a": {
         "ground": {
             "cd": 240,
@@ -51,14 +51,14 @@
 
     "8a": {
         "ground": {
-            "cd": 450,
+            "cd": 900,
             "nb": 1,
-            "action": 560
+            "action": 551
         },
         "air": {
-            "cd": 450,
+            "cd": 900,
             "nb": 1,
-            "action": 560,
+            "action": 551,
             "speedY": 0,
             "gravityY": 0
         }
@@ -67,31 +67,31 @@
         "ground": {
             "cd": 900,
             "nb": 1,
-            "action": 525,
-            "offsetX": -50
+            "action": 570
         },
         "air": {
             "cd": 900,
             "nb": 1,
-            "action": 527,
+            "action": 570,
             "speedY": 0,
-            "gravityY": 0,
-            "offsetX": -50
+            "gravityY": 0
         }
     },
     "8c": {
         "ground": {
             "cd": 600,
             "nb": 1,
-            "action": 541,
-            "offsetX": -50
+            "action": 510,
+            "offsetX": 0,
+            "recovery": 300
         },
         "air": {
             "cd": 600,
             "nb": 1,
-            "action": 541,
+            "action": 510,
             "posY": 0,
-            "offsetX": -50
+            "offsetX": 0,
+            "recovery": 300
         }
     },
 
@@ -99,24 +99,22 @@
         "ground": {
             "speedX": 0,
             "speedY": 0,
-            "offsetX": 50,
-            "cost": 3,
-            "cardName": 207,
-            "cd": 1200,
+            "cost": 2,
+            "cardName": 208,
+            "cd": 1500,
             "nb": 1,
-            "action": 607
+            "action": 608
         },
         "air": {
             "speedX": 0,
             "speedY": 0,
             "posY": 0,
             "gravityY": 0,
-            "offsetX": 50,
-            "cost": 3,
-            "cardName": 207,
-            "cd": 1200,
+            "cost": 2,
+            "cardName": 208,
+            "cd": 1500,
             "nb": 1,
-            "action": 607
+            "action": 608
         }
     }
 }
