--- a/src/assets/tenshi/config0.json
+++ b/src/assets/tenshi/config0.json
@@ -1,18 +1,16 @@
 {
-    "spells": [207],
-    "shownCost": 3,
+    "spells": [201],
+    "shownCost": 2,
     "5a": {
         "ground": {
-            "cd": 240,
+            "cd": 300,
             "nb": 1,
-            "action": 303,
-            "offsetX": -15
+            "action": 304
         },
         "air": {
-            "cd": 240,
+            "cd": 300,
             "nb": 1,
-            "action": 303,
-            "offsetX": -15,
+            "action": 304,
             "posY": 0
         }
     },
@@ -23,75 +21,67 @@
             "action": 401
         },
         "air": {
-            "start": 306,
-            "startMin": 12,
-            "startMax": 32,
-            "startKeys": [0, 0, 0, 1, 0, 0, 0, 0],
-            "cd": 360,
+            "cd": 300,
             "nb": 1,
-            "speedY": 0,
-            "gravityY": 0,
-            "action": 325
+            "action": 402,
+            "posY": 0
         }
     },
     "5c": {
         "ground": {
-            "cd": 360,
+            "cd": 420,
             "nb": 1,
-            "action": 410
+            "action": 412,
+            "cond": "end"
         },
         "air": {
-            "cd": 360,
+            "cd": 420,
             "nb": 1,
-            "action": 410,
-            "posY": 0
+            "action": 416,
+            "speedY": 0,
+            "gravityY": 0,
+            "cond": "end"
         }
     },
 
 
+
+
     "8a": {
         "ground": {
-            "cd": 450,
+            "cd": 600,
             "nb": 1,
             "action": 560
         },
         "air": {
-            "cd": 450,
+            "cd": 600,
             "nb": 1,
             "action": 560,
-            "speedY": 0,
-            "gravityY": 0
+            "posY": 0
         }
     },
     "8b": {
         "ground": {
             "cd": 900,
             "nb": 1,
-            "action": 525,
-            "offsetX": -50
+            "action": 520
         },
         "air": {
             "cd": 900,
             "nb": 1,
-            "action": 527,
-            "speedY": 0,
-            "gravityY": 0,
-            "offsetX": -50
+            "action": 522
         }
     },
     "8c": {
         "ground": {
-            "cd": 600,
+            "cd": 750,
             "nb": 1,
-            "action": 541,
-            "offsetX": -50
+            "action": 545
         },
         "air": {
-            "cd": 600,
+            "cd": 750,
             "nb": 1,
-            "action": 541,
-            "posY": 0,
-            "offsetX": -50
+            "action": 547
         }
     },
 
@@ -99,24 +89,24 @@
         "ground": {
             "speedX": 0,
             "speedY": 0,
-            "offsetX": 50,
-            "cost": 3,
-            "cardName": 207,
+            "offsetX": -50,
+            "cost": 2,
+            "cardName": 201,
             "cd": 1200,
             "nb": 1,
-            "action": 607
+            "action": 601
         },
         "air": {
             "speedX": 0,
             "speedY": 0,
             "posY": 0,
             "gravityY": 0,
-            "offsetX": 50,
-            "cost": 3,
-            "cardName": 207,
+            "offsetX": -50,
+            "cost": 2,
+            "cardName": 201,
             "cd": 1200,
             "nb": 1,
-            "action": 607
+            "action": 601
         }
     }
 }
