--- a/src/assets/utsuho/config1.json
+++ b/src/assets/utsuho/config1.json
@@ -4,46 +4,40 @@
             "cd": 360,
             "nb": 1,
             "action": 301,
-            "offsetX": -15,
-            "recovery": 60
+            "offsetX": -15
         },
         "air": {
             "cd": 360,
             "nb": 1,
             "action": 301,
             "offsetX": -15,
-            "posY": 0,
-            "recovery": 60
+            "posY": 0
         }
     },
     "5b": {
         "ground": {
             "cd": 420,
             "nb": 1,
-            "action": 401,
-            "recovery": 180
+            "action": 401
         },
         "air": {
             "cd": 420,
             "nb": 1,
             "action": 405,
             "speedY": 0,
-            "gravityY": 0,
-            "recovery": 180
+            "gravityY": 0
         }
     },
     "5c": {
         "ground": {
             "cd": 360,
             "nb": 1,
-            "action": 412,
-            "recovery": 120
+            "action": 412
         },
         "air": {
             "cd": 360,
             "nb": 1,
             "action": 412,
-            "recovery": 120,
             "posY": 0
         }
     }
