--- a/src/assets/youmu/config0.json
+++ b/src/assets/youmu/config0.json
@@ -1,5 +1,5 @@
 {
-    "spells": [206],
+    "spells": [201],
     "shownCost": 3,
     "5a": {
         "ground": {
@@ -101,42 +101,38 @@
         "ground": {
             "cd": 600,
             "nb": 1,
-            "action": 546,
-            "offsetX": -100,
-            "recovery": 120
+            "action": 570,
+            "offsetX": -100
         },
         "air": {
             "cd": 600,
             "nb": 1,
-            "action": 546,
-            "offsetX": -100,
-            "posY": 0,
-            "recovery": 120
+            "action": 572,
+            "offsetX": -100
         }
     },
     "8b": {
         "ground": {
             "cd": 600,
             "nb": 1,
-            "action": 560
+            "action": 505
         },
         "air": {
             "cd": 600,
             "nb": 1,
-            "action": 560,
-            "posY": 0
+            "action": 507
         }
     },
     "8c": {
         "ground": {
             "cd": 900,
             "nb": 1,
-            "action": 525
+            "action": 550
         },
         "air": {
             "cd": 900,
             "nb": 1,
-            "action": 525,
+            "action": 550,
             "posY": 0
         }
     },
@@ -145,23 +141,24 @@
         "ground": {
             "speedX": 0,
             "speedY": 0,
-            "offsetX": -50,
+            "offsetX": 0,
             "cost": 3,
-            "cardName": 206,
+            "cardName": 201,
             "cd": 1200,
             "nb": 1,
-            "action": 606
+            "action": 601
         },
         "air": {
             "speedX": 0,
             "speedY": 0,
             "gravityY": 0,
-            "offsetX": -50,
+            "offsetX": 0,
             "cost": 3,
-            "cardName": 206,
+            "cardName": 201,
             "cd": 1200,
             "nb": 1,
-            "action": 606
+            "action": 601,
+            "posY": 0
         }
     }
 }
