--- a/src/assets/yuyuko/config1.json
+++ b/src/assets/yuyuko/config1.json
@@ -4,47 +4,41 @@
             "cd": 300,
             "nb": 1,
             "action": 302,
-            "offsetX": -15,
-            "recovery": 120
+            "offsetX": -15
         },
         "air": {
             "cd": 300,
             "nb": 1,
             "action": 302,
             "offsetX": -15,
-            "posY": 0,
-            "recovery": 120
+            "posY": 0
         }
     },
     "5b": {
         "ground": {
             "cd": 330,
             "nb": 1,
-            "action": 402,
-            "recovery": 30
+            "action": 402
         },
         "air": {
             "cd": 300,
             "nb": 1,
             "speedY": 0,
             "gravityY": 0,
-            "action": 307,
-            "recovery": 60
+            "action": 307
         }
     },
     "5c": {
         "ground": {
             "cd": 420,
             "nb": 1,
-            "action": 412,
-            "recovery": 120
+            "action": 412
         },
         "air": {
             "cd": 420,
             "nb": 1,
             "action": 412,
-            "posY": 0,
-            "recovery": 120
+            "posY": 0
         }
     }
 }
